--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="hunterpackage.hobbyhunter2">
+    package="hunterpackage.hobbyhunter2" >
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -20,10 +20,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login">
+            android:label="@string/title_activity_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,8 +36,8 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".ProfileViewActivity"
-            android:windowSoftInputMode="stateHidden"
-            android:label="@string/title_activity_profile" />
+            android:label="@string/title_activity_profile"
+            android:windowSoftInputMode="stateHidden" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -54,8 +54,13 @@
             android:name=".MapActivity"
             android:label="@string/title_activity_map" />
         <activity android:name=".MyHobbies" />
-        <activity android:name=".ProfileOthersActivity"
-            android:label="@string/title_activity_profile_others"></activity>
+        <activity
+            android:name=".ProfileOthersActivity"
+            android:label="@string/title_activity_profile_others" />
+        <activity
+            android:name=".RegisterActivity"
+            android:label="@string/title_activity_register" >
+        </activity>
     </application>
 
 </manifest>
