--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -27,7 +27,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.com.vansuita.pickimage.provider"
@@ -38,6 +37,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/picker_provider_paths" />
         </provider>
+
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login">
@@ -76,8 +76,9 @@
             android:label="@string/title_activity_profile_others" />
         <activity
             android:name=".RegisterActivity"
-            android:label="@string/title_activity_register"></activity>
-        <activity android:name=".MyHobby"></activity>
+            android:label="@string/title_activity_register" />
+        <activity android:name=".MyHobby" />
+        <activity android:name=".ChatActivity"></activity>
     </application>
 
 </manifest>
